# expected

./: .gitignore  .html  .travis.yml  README.md  dub.sdl  dub.selections.json  expected.Abort.enableDefaultConstructor.html  expected.Abort.html  expected.Abort.onAccessEmptyError.html  expected.Abort.onAccessEmptyValue.html  expected.AsException.enableDefaultConstructor.html  expected.AsException.html  expected.AsException.onErrorSet.html  expected.Expected.empty.html  expected.Expected.error.html  expected.Expected.front.1.html  expected.Expected.front.2.html  expected.Expected.front.html  expected.Expected.hasError.1.html  expected.Expected.hasError.2.html  expected.Expected.hasError.html  expected.Expected.hasValue.1.html  expected.Expected.hasValue.2.html  expected.Expected.hasValue.html  expected.Expected.html  expected.Expected.opAssign.html  expected.Expected.opCast.1.html  expected.Expected.opCast.2.html  expected.Expected.opCast.html  expected.Expected.opEquals.1.html  expected.Expected.opEquals.2.html  expected.Expected.opEquals.3.html  expected.Expected.opEquals.4.html  expected.Expected.opEquals.html  expected.Expected.popFront.html  expected.Expected.this.1.html  expected.Expected.this.2.html  expected.Expected.this.3.html  expected.Expected.this.4.html  expected.Expected.this.5.html  (+59 more)
.github/workflows/: ci.yml
source/: expected.d  expected.d.html
source/expected/: expected.d
tests/: expected.d
